Refactor CORS configuration in SecurityConfig
- Replaced `List.of` with `Arrays.asList` for allowed headers.
- Added `maxAge` configuration for preflight requests.
- Removed unused imports and variables for cleaner code.